[package]
name = "Lolo-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread","signal"] }
serde_json = "1.0.149"
tracing = "0.1.44"
axum-server = { version = "0.8", features = ["tls-rustls"]}
http = "1.4.0"
rbs = { version = "4.7.0" }
rustls = { version = "0.23.36", features = ["ring"] }
chrono = "0.4.43"
base64 = "0.22.1"

rbatis = { version = "4.7.1"}
rbdc-sqlite = { version = "4.7.2" }
rbdc-mysql = "4.7.1"

aes = "0.8"
des = "0.8.1"
cipher = "0.4"
rand = "0.9.2"


